header_about company

--- a/7-8_homework/index.html
+++ b/7-8_homework/index.html
@@ -9,12 +9,12 @@
 	<link rel="stylesheet" href="css/media_queries_480.css">
 	<link rel="stylesheet" href="css/media_queries_768.css">
 	<link rel="stylesheet" href="css/media_queries_960.css">
-	
+	<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
 </head>
 <body>
 	<header>
-		<div class="boxshadow"></div> <!-- блок с темным прозрачным фоном -->
 		<div class="wrapper">
+			<div class="boxshadow"></div> <!-- блок с темным прозрачным фоном -->
 			<a class="header__logo" href="#">PINGBULL</a>
 			<menu class="menu-compact">
 				<ul class="menu">
@@ -50,14 +50,32 @@
 				<a href="#"><img src="img/arrowright.png" alt="arrowright"></a>
 			</div>
 			<div class="pagination">
-				<div class="pagination__slide"></div>
-				<div class="pagination__slide"></div>
-				<div class="pagination__slide"></div>
-				<div class="pagination__slide"></div>
+				<i class="pagination__slide"></i>
+				<i class="pagination__slide"></i>
+				<i class="pagination__slide"></i>
+				<i class="pagination__slide"></i>
 			</div>
 		</div>
 		</div>
-		
+		<div class="wrapper-about">
+			<div class="about">
+				<div class="about__company">
+					<img src="img/key.png" alt="key">
+					<h1>ABOUT OUR COMPANY</h1>
+					<p>Nunc turpis neque, feugiat eget eleifend et, lacinia non neque. Praesent rhoncus ultrices posuere. Pellentesque vel lacus eget nisi convallis auctor. Nam vitae lectus eu</p>
+				</div>
+				<div class="about__company">
+					<img src="img/key.png" alt="key">
+					<h1>ABOUT OUR COMPANY</h1>
+					<p>Nunc turpis neque, feugiat eget eleifend et, lacinia non neque. Praesent rhoncus ultrices posuere. Pellentesque vel lacus eget nisi convallis auctor. Nam vitae lectus eu</p>
+				</div>
+				<div class="about__company">
+					<img src="img/key.png" alt="key">
+					<h1>ABOUT OUR COMPANY</h1>
+					<p>Nunc turpis neque, feugiat eget eleifend et, lacinia non neque. Praesent rhoncus ultrices posuere. Pellentesque vel lacus eget nisi convallis auctor. Nam vitae lectus eu</p>
+				</div>
+			</div>
+		</div>
 	</header>
 </body>
 </html>
