anti-pattern and typos was changed

--- a/5_homework/cadastre/index.html
+++ b/5_homework/cadastre/index.html
@@ -13,7 +13,7 @@
 				<nav>
 		            <ul>
 		                <li><a href="#">Meu YouBike</a></li>
-		                <li class="active"><a chref="#">Vender</a></li>
+		                <li class="active"><a href="#">Vender</a></li>
 		                <li><a href="#">Forum</a></li>
 		                <li><a href="#">Contato</a></li>
 		                <li><a href="#">Ajuda</a></li>
@@ -45,7 +45,7 @@
 						<input type="checkbox" id="updates"> 
 						<label for="updates">Send me Youbike updates and tips</label>
 					</div>
-					<button class="create" type="submit"><p>Create my Account</p></button>
+					<button class="create" type="submit">Create my Account</button>
 				</div>
 				<div class="privacy">
 					<p>By clicking the button above, you agree to the Terms of Service</p>
