project with draft media_queries

--- a/7-8_homework/index.html
+++ b/7-8_homework/index.html
@@ -37,7 +37,7 @@
 					</li>
 				</ul>
 			</menu>
-			<div class="boxshadow"> <!-- блок с темным прозрачным фоном -->	
+			<div class="boxshadow"> 
 				<div class="slider">
 					<div class="slider__arrowleft">
 						<a href="#"><img src="img/arrowleft.png" alt="arrowleft"></a>
@@ -45,6 +45,9 @@
 					<div class="slider__content">
 						<h1>Lorem Ipsum Dolor</h1>
 						<h2>IT WILL MAKE ALL OF YOUR DREAMS COME</h2>
+					</div>
+					<div class="iphone">
+						<img src="img/iphone.png" alt="iphone" class="iphonesmall">
 					</div>
 					<div class="slider__arrowright">	
 						<a href="#"><img src="img/arrowright.png" alt="arrowright"></a>
@@ -63,19 +66,25 @@
 				<div class="about__company">
 					<img src="img/key.png" alt="key">
 					<h1>ABOUT OUR COMPANY</h1>
-					<p>Nunc turpis neque, feugiat eget eleifend et, lacinia non neque. Praesent rhoncus ultrices posuere. Pellentesque vel lacus eget nisi convallis auctor. Nam vitae lectus eu</p>
+					<div class="about__text">
+						<p>Nunc turpis neque, feugiat eget eleifend et, lacinia non neque. Praesent rhoncus ultrices posuere. Pellentesque vel lacus eget nisi convallis auctor. Nam vitae lectus eu</p>
+					</div>
 					<a href="#"><h2>READ MORE</h2></a>
 				</div>
 				<div class="about__company">
 					<img src="img/cloud.png" alt="key">
 					<h1>ABOUT OUR COMPANY</h1>
-					<p>Nunc turpis neque, feugiat eget eleifend et, lacinia non neque. Praesent rhoncus ultrices posuere. Pellentesque vel lacus eget nisi convallis auctor. Nam vitae lectus eu</p>
+					<div class="about__text">	
+						<p>Nunc turpis neque, feugiat eget eleifend et, lacinia non neque. Praesent rhoncus ultrices posuere. Pellentesque vel lacus eget nisi convallis auctor. Nam vitae lectus eu</p>
+					</div>
 					<a href="#"><h2>READ MORE</h2></a>
 				</div>
 				<div class="about__company">
 					<img src="img/notes.png" alt="key">
 					<h1>ABOUT OUR COMPANY</h1>
-					<p>Nunc turpis neque, feugiat eget eleifend et, lacinia non neque. Praesent rhoncus ultrices posuere. Pellentesque vel lacus eget nisi convallis auctor. Nam vitae lectus eu</p>
+					<div class="about__text">	
+						<p>Nunc turpis neque, feugiat eget eleifend et, lacinia non neque. Praesent rhoncus ultrices posuere. Pellentesque vel lacus eget nisi convallis auctor. Nam vitae lectus eu</p>
+					</div>
 					<a href="#"><h2>READ MORE</h2></a>
 				</div>
 			</div>
@@ -116,18 +125,56 @@
 			<a class="more" href="#">MORE BLOG POSTS</a>
 		</div>
 	</div>
-	<footer>
-		<div class="content__logo">
-			<div class="content__logo">
-				<img src="img/logo1.png" alt="logo1">
-			</div>
-			<div class="content__logo">
-				<img src="img/logo2.png" alt="logo2">
-			</div>
-			<div class="content__logo">
-				<img src="img/logo3.png" alt="logo3">
-			</div>
+	<div class="content__logo">
+		<div class="content__logo1"></div>
+		<div class="content__logo2"></div>
+		<div class="content__logo3"></div>
+		<div class="content__logo4"></div>
+		<div class="content__logo5"></div>
+		<div class="content__logo6"></div>
+	</div>
+	<div class="about__footer">
+		<div class="about__company--footer">
+			<h1>NEW CATEGORIES</h1>
+			<p>Nunc turpis neque, feugiat eget eleifend et, lacinia non neque. Praesent rhoncus ultrices posuere. Pellentesque vel lacus eget nisi convallis auctor. Nam vitae lectus eu libero pellentesque pulvinar. Quisque urna risus, mattis pulvinar bibendum in, venenatis quis neque. Mauris nec m</p>
 		</div>
+		<div class="about__company--footer">
+			<h1>NEW CATEGORIES</h1>
+			<p>Nunc turpis neque, feugiat eget eleifend et, lacinia non neque. Praesent rhoncus ultrices posuere. Pellentesque vel lacus eget nisi convallis auctor. Nam vitae lectus eu libero pellentesque pulvinar. Quisque urna risus, mattis pulvinar bibendum in, venenatis quis neque. Mauris nec m</p>
+		</div>
+		<div class="about__company--footer">
+			<h1>NEW CATEGORIES</h1>
+			<p>Nunc turpis neque, feugiat eget eleifend et, lacinia non neque. Praesent rhoncus ultrices posuere. Pellentesque vel lacus eget nisi convallis auctor. Nam vitae lectus eu libero pellentesque pulvinar. Quisque urna risus, mattis pulvinar bibendum in, venenatis quis neque. Mauris nec m</p>
+		</div>
+	</div>
+	<footer>
+		<menu class="topmenu__footer">
+			<ul class="menu__footer nav__footer">
+				<li class="menu__item__footer">
+					<a class="menu__link__footer" href="#">HOME</a>
+				</li>
+				<li class="menu__item__footer">
+					<a class="menu__link__footer" href=#>ABOUT</a>
+				</li>
+				<li class="menu__item__footer">
+					<a class="menu__link__footer" href=#>BLOG</a>
+				</li>
+				<li class="menu__item__footer">
+					<a class="menu__link__footer" href=#>PRODUCTS</a>
+				</li>
+				<li class="menu__item__footer">
+					<a class="menu__link__footer" href=#>LOREM IPSUM</a>
+				</li>
+				<li class="menu__item__footer">
+					<a class="menu__link__footer" href=#>DOLOR SIT AMET</a>
+				</li>
+			</ul>
+		</menu>
+		<div class="design">Design by <a class="pingbull" href="#">Pingbull AS</a></div>
+
 	</footer>
+
+
+
 </body>
 </html>
