correct mistakes in css

--- a/6_homework/index.html
+++ b/6_homework/index.html
@@ -185,12 +185,12 @@
 					</div>
 				</div>
 				<div class="name_check">
-					<input type="checkbox" id="checkbox">
-						<label for="checkbox">Бренд 1</label><br>
-					<input type="checkbox" id="checkbox">
-						<label for="checkbox">Бренд 2</label><br>
-					<input type="checkbox" id="checkbox">
-						<label for="checkbox">Бренд 3</label><br>
+					<input type="checkbox" id="checkbox1">
+						<label for="checkbox1">Бренд 1</label><br>
+					<input type="checkbox" id="checkbox2">
+						<label for="checkbox2">Бренд 2</label><br>
+					<input type="checkbox" id="checkbox3">
+						<label for="checkbox3">Бренд 3</label><br>
 				</div>
 				<div class="radio">
 					<div class="imgradio_check">
@@ -198,12 +198,12 @@
 					</div>
 				</div>
 				<div class="name_check">
-					<input type="checkbox" id="checkbox">
-						<label for="checkbox">Бренд 1</label><br>
-					<input type="checkbox" id="checkbox">
-						<label for="checkbox">Бренд 2</label><br>
-					<input type="checkbox" id="checkbox">
-						<label for="checkbox">Бренд 3</label><br>
+					<input type="checkbox" id="box1">
+						<label for="box1">Бренд 1</label><br>
+					<input type="checkbox" id="box2">
+						<label for="box2">Бренд 2</label><br>
+					<input type="checkbox" id="box3">
+						<label for="box3">Бренд 3</label><br>
 				</div>
 				<button type="submit">ВЫБРАТЬ</button>
 			</aside>
