media queries 320px was changed

--- a/7-8_homework/index.html
+++ b/7-8_homework/index.html
@@ -10,11 +10,14 @@
 	<link rel="stylesheet" href="css/media_queries_768.css">
 	<link rel="stylesheet" href="css/media_queries_960.css">
 	<link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
 	<header>
 		<div class="header__wrapper">
-			<a class="header__logo" href="#">PINGBULL</a>
+			<div class="header__logoconteiner">
+				<a class="header__logo" href="#">PINGBULL</a>
+			</div>
 			<menu class="topmenu">
 				<ul class="menu nav">
 					<li class="menu__item">
@@ -96,10 +99,12 @@
 				<div class="slider__about">
 					<h1>PINGBULLER</h1>
 					<a href="#">STARTS HERE</a>
-					<p>“Nunc turpis neque, feugiat eget eleifend et, lacinia non neque. Praesent rhoncus ultrices posuere. Pellentesque vel lacus eget nisi convallis auctor. Nam vitae lectus eu libero pellentesque pulvinar urna risus, mattis pulvinar bibendum in, venenatis quis neque. Mauris nec metus ultricies erat consequat dignissim non eu nisl.”</p>
+					<div class="slider__text">
+						<p>“Nunc turpis neque, feugiat eget eleifend et, lacinia non neque. Praesent rhoncus ultrices posuere. Pellentesque vel lacus eget nisi convallis auctor. Nam vitae lectus eu libero pellentesque pulvinar urna risus, mattis pulvinar bibendum in, venenatis quis neque. Mauris nec metus ultricies erat consequat dignissim non eu nisl.”</p>
+					</div>
 			</div>
 		</div>
-		<div class="pagination">
+		<div class="pagination__about">
 			<i class="pagination__slide"></i>
 			<i class="pagination__slide"></i>
 			<i class="pagination__slide"></i>
@@ -171,7 +176,6 @@
 			</ul>
 		</menu>
 		<div class="design">Design by <a class="pingbull" href="#">Pingbull AS</a></div>
-
 	</footer>
 
 
