--- a/JS__11-12_HW/Carousel.plugin/index.html
+++ b/JS__11-12_HW/Carousel.plugin/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Создание простой jQuery карусели</title>
+	<title>jQuery карусель</title>
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
