--- a/JS__11-12_HW/Carousel.plugin/index.html
+++ b/JS__11-12_HW/Carousel.plugin/index.html
@@ -6,7 +6,7 @@
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-	<div class="carousel-arrow-left"><span>Влево</span></div>
+	<div class="carousel-arrow-left arrow"><span>Влево</span></div>
 	<div class="carousel-hider">
 		<ul class="carousel-list">
 			<li class="carousel-element"><img src="img/img1.jpg"><p>Описание 1</p></li>
@@ -23,7 +23,7 @@
 			<li class="carousel-element"><img src="img/img6.jpg"><p>Описание 12</p></li>
 		</ul>
 	</div>
-	<div class="carousel-arrow-right"><span>Вправо</span></div>
+	<div class="carousel-arrow-right arrow"><span>Вправо</span></div>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	<script type="text/javascript" src="jquery.carousel.js"></script>
 	<script type="text/javascript" src="script.js"></script>
